# obs-websocket-rs

./: Cargo.toml  README.md
examples/: events.rs  example.rs  messages.rs  simple.rs
src/: common_types.rs  error.rs  events.rs  lib.rs  obs.rs  requests.rs  responses.rs  typedefs.rs
src/obs/: websocket_stream.rs
tests/: integration.rs
