[package]
name = "obs-websocket"
version = "0.1.0"
authors = ["Heliozoa <dm89132@gmail.com>"]
edition = "2018"

[dependencies]
tungstenite = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"
sha2 = "0.8.1"
base64 = "0.11"
log = "0.4"
futures = "0.3"
typed-builder = "0.5"

[dev-dependencies]
env_logger = "0.7"
