[package]
name = "obs-websocket"
version = "0.1.0"
authors = ["Heliozoa <dm89132@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "API for controlling OBS (Open Broadcaster Software) through obs-websocket"
repository = "https://github.com/Heliozoa/obs-websocket-rs"
keywords = ["api-bindings", "web-programming::websocket"]
categories = ["obs", "websocket"]
exclude = [
    ".gitignore",
    "rustfmt.toml",
]

[dependencies]
async-tungstenite = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8.1"
base64 = "0.12"
log = "0.4"
futures = "0.3"
typed-builder = "0.6"
thiserror = "1"
smol = "0.1"
piper = "0.1"

[dev-dependencies]
env_logger = "0.7"
